<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.aplikasi.dicodingevents.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_navigation_upcoming"
            app:destination="@id/navigation_upcoming" />
        <action
            android:id="@+id/action_navigation_home_to_navigation_finished"
            app:destination="@id/navigation_finished" />
        <action
            android:id="@+id/action_navigation_home_to_navigation_favorite"
            app:destination="@id/navigation_favorite" />
        <action
            android:id="@+id/action_navigation_home_to_navigation_settings"
            app:destination="@id/navigation_settings" />
    </fragment>

    <fragment
        android:id="@+id/navigation_upcoming"
        android:name="com.aplikasi.dicodingevents.ui.upcoming.UpcomingFragment"
        android:label="@string/title_upcoming"
        tools:layout="@layout/fragment_upcoming" />

    <fragment
        android:id="@+id/navigation_finished"
        android:name="com.aplikasi.dicodingevents.ui.finished.FinishedFragment"
        android:label="@string/title_finished"
        tools:layout="@layout/fragment_finished" />

    <fragment
        android:id="@+id/navigation_favorite"
        android:name="com.aplikasi.dicodingevents.ui.favorite.FavoriteFragment"
        android:label="@string/title_favorite"
        tools:layout="@layout/fragment_favorite" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.aplikasi.dicodingevents.ui.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />
</navigation>