<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginStart="8dp"
    android:layout_marginTop="4dp"
    android:layout_marginEnd="8dp"
    android:layout_marginBottom="4dp"
    app:cardCornerRadius="4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <ImageView
            android:id="@+id/tvImageEvent"
            android:layout_width="128dp"
            android:layout_height="128dp"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/tvEventName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@tools:sample/avatars" />

        <TextView
            android:id="@+id/tvEventName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/tvEventTime"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tvImageEvent"
            app:layout_constraintTop_toTopOf="@id/tvImageEvent"
            tools:text="@string/name_event" />

        <TextView
            android:id="@+id/tvEventTime"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/tvEventOwner"
            app:layout_constraintEnd_toStartOf="@+id/tv_favorite"
            app:layout_constraintStart_toEndOf="@+id/tvImageEvent"
            app:layout_constraintTop_toBottomOf="@id/tvEventName"
            tools:text="@string/date_event" />

        <TextView
            android:id="@+id/tvEventOwner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="24dp"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/tv_favorite"
            app:layout_constraintStart_toEndOf="@+id/tvImageEvent"
            app:layout_constraintTop_toBottomOf="@id/tvEventTime"
            tools:text="@string/by_event" />

        <ImageView
            android:id="@+id/tv_favorite"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="60dp"
            android:layout_marginEnd="8dp"
            android:contentDescription="@string/add_favorite"
            android:src="@drawable/baseline_favorite_border_24"
            android:tag="Not Saved"
            app:layout_constraintBottom_toTopOf="@+id/tvImageEvent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tvEventOwner"
            app:layout_constraintTop_toBottomOf="@+id/tvEventName"
            app:layout_constraintVertical_bias="0.272" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>
